--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "json-api",
   "version": "1.0.0",
+  "description": "Json API",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
     "multer": "^1.4.5"
-  }
+  },
+  "devDependencies": {
+    // Add dev dependencies here if needed
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
